--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -64,23 +64,36 @@
   let postIcon = document.querySelector('#post-icon')
 
   let colorSet = ['#f7b157', 'lightgray']
+  
+  sideBarColorChange = function() {
+    // screen height variable
+    let viewportHeight = document.documentElement.clientHeight
+    let HeaderHeight = document.querySelector('Header').style.height.split('px')[0]
+    let sectionUpperHalfHeight = (viewportHeight - HeaderHeight) / 2
 
-  mainIcon.addEventListener('click', function() {
-    mainIcon.style.color = colorSet[0]
-    teamIcon.style.color = portfolioIcon.style.color = postIcon.style.color = colorSet[1]
-  })
-  teamIcon.addEventListener('click', function() {
-    teamIcon.style.color = colorSet[0]
-    mainIcon.style.color = portfolioIcon.style.color = postIcon.style.color = colorSet[1]
-  })
-  portfolioIcon.addEventListener('click', function() {
-    portfolioIcon.style.color = colorSet[0]
-    mainIcon.style.color = teamIcon.style.color = postIcon.style.color = colorSet[1]
-  })
-  postIcon.addEventListener('click', function() {
-    postIcon.style.color = colorSet[0]
-    mainIcon.style.color = teamIcon.style.color = portfolioIcon.style.color = colorSet[1]
-  })
+    // section top value
+    let teamIntroSectionTop = document.querySelector('.team-intro-image').getBoundingClientRect().top
+    let portfolioSectionTop = document.querySelector('.portfolio-image').getBoundingClientRect().top
+    let postSectionTop = document.querySelector('.post-image').getBoundingClientRect().top
+
+    if (postSectionTop - HeaderHeight <= sectionUpperHalfHeight) {
+      postIcon.style.color = colorSet[0]
+      mainIcon.style.color = teamIcon.style.color = portfolioIcon.style.color = colorSet[1]
+    } else if (portfolioSectionTop - HeaderHeight <= sectionUpperHalfHeight) {
+      portfolioIcon.style.color = colorSet[0]
+      mainIcon.style.color = teamIcon.style.color = postIcon.style.color = colorSet[1]
+    } else if (teamIntroSectionTop - HeaderHeight <= sectionUpperHalfHeight) {
+      teamIcon.style.color = colorSet[0]
+      mainIcon.style.color = portfolioIcon.style.color = postIcon.style.color = colorSet[1]
+    } else {
+      mainIcon.style.color = colorSet[0]
+      teamIcon.style.color = portfolioIcon.style.color = postIcon.style.color = colorSet[1]
+    }
+  }
+  
+  // 창을 scroll 하거나 resize 될 때 모두 적용
+  window.addEventListener('scroll', sideBarColorChange)
+  window.addEventListener('resize', sideBarColorChange)
 </script>
 
 </html>
