0206 | KR | facebook social login

--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/636468347f.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
 </head>
 
 <body>
@@ -25,8 +27,9 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+<div id="fb-root"></div>
 </body>
-
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="/__/firebase/init.js"></script>
@@ -34,6 +37,8 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
+
 <script>
 let section = document.querySelector('#homepage-imgbanner')
 let mainIcon = document.querySelector('#main-icon')
@@ -43,4 +48,5 @@ let postIcon = document.querySelector('#post-icon')
 
 let colorSet = ['#f7b157', 'lightgray']
 </script>
+
 </html>
