--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -10,10 +10,18 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="path/to/codemirror/lib/codemirror.css">
   <link
     href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Gugi|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap"
     rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="path/to/codemirror.js"></script>
+  <script type="text/javascript" src="path/to/vue.min.js"></script>
+  <script type="text/javascript" src="path/to/dist/vue-codemirror.js"></script>
+  <script type="text/javascript" src="path/to/codemirror/some-resources.js"></script>
+  <script type="text/javascript">
+    Vue.use(window.VueCodemirror)
+  </script>
   <script src="https://kit.fontawesome.com/636468347f.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
