--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -13,7 +13,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Gugi|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap"
     rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=baf94ebb5cd411ff15a24cfdd6719d2d&libraries=services,clusterer,drawing"></script>
   <script src="https://kit.fontawesome.com/636468347f.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -38,7 +39,6 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
-
 <script>
 let section = document.querySelector('#homepage-imgbanner')
 let mainIcon = document.querySelector('#main-icon')
