--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,32 +27,19 @@
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
 </head>
-
 <body>
   <noscript>
-    <strong>We're sorry but ssafy doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <strong>We're sorry but ssafy doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 <div id="fb-root"></div>
 </body>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
-<script src="/__/firebase/init.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-analytics.js"></script>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
 <script>
 let section = document.querySelector('#homepage-imgbanner')
 let mainIcon = document.querySelector('#main-icon')
 let portfolioIcon = document.querySelector('#portfolio-icon')
 let postIcon = document.querySelector('#post-icon')
-
 let colorSet = ['#f7b157', 'lightgray']
 </script>
-
 </html>
