0217 | GH | customizing mypage_github_section

--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -35,6 +35,8 @@
 <div id="fb-root"></div>
 </body>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
+<script src="https://cdn.jsdelivr.net/npm/echarts@4.1.0/dist/echarts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-echarts@4.0.2"></script>
 <script>
 let section = document.querySelector('#homepage-imgbanner')
 let mainIcon = document.querySelector('#main-icon')
