--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Gugi|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cantarell|Chivo|Gudea|Inria+Serif|Julius+Sans+One|M+PLUS+Rounded+1c|Press+Start+2P|Quicksand|Sarabun&display=swap" rel="stylesheet">
   <script type="text/javascript" src="path/to/codemirror.js"></script>
   <script type="text/javascript" src="path/to/vue.min.js"></script>
