0219 | HJ | https update

--- a/ssafy-frontend/public/index.html
+++ b/ssafy-frontend/public/index.html
@@ -25,7 +25,7 @@
   </script>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=baf94ebb5cd411ff15a24cfdd6719d2d&libraries=services,clusterer,drawing"></script>
   <script src="https://kit.fontawesome.com/636468347f.js" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v6.0&appId=506786963606539&autoLogAppEvents=1"></script>
 </head>
